# IaP-labs

./: .gitignore
1 semester/lab11/: 382008-1_09_12_Kolesov.c  382008-1_ServiceFuncs_Kolesov.c  382008-1_ServiceFuncs_Kolesov.h  382008-1_SortingFuncs_Kolesov.c  382008-1_SortingFuncs_Kolesov.h
1 semester/lab12/: io.h
1 semester/lab15/: notebook.c  notebook.h  notebook.txt
1 semester/lab7/: io.c  iow.c  main.c
1 semester/lab8/: io.c  main.c
1 semester/lab9/: CMakeLists.txt
1 semester/lab9/src/: io.c  io.h  main.c  sort.c  sort.h  utils.c  utils.h
2 semester/Home works/1/: Fraction.cpp  Fraction.h  source.cpp
2 semester/Home works/2/: ArrController.h  ArrController.inl  Fraction.cpp  Fraction.h  Source.cpp
2 semester/Home works/3/: Matrix.cpp  Matrix.h
2 semester/Tasks/1/: Source.cpp  Vector3D.cpp  Vector3D.h
2 semester/Tasks/2/: Matrix.cpp  Matrix.h  Source.cpp
2 semester/Tasks/3/: Source.cpp  TextEditor.cpp  TextEditor.h
2 semester/Tasks/4/: Contacts.cpp  Contacts.h  Main.cpp  a.data
2 semester/Tasks/5/: Cashbox.cpp  (+6 more)
3 semester/lab1/: TBitField.cpp  TBitField.h  TSet.cpp  TSet.h  main.cpp
__include/: io.c
lab10/: main.c
lab11/: 382008-1_09_12_Kolesov.c  382008-1_ServiceFuncs_Kolesov.c  382008-1_ServiceFuncs_Kolesov.h  382008-1_SortingFuncs_Kolesov.c  382008-1_SortingFuncs_Kolesov.h
lab12/: main.c
lab13/: main.c
lab14/: main.c  source.c
lab15/: CMakeLists.txt  main.c
lab15/src/: io.c  io.h  main.c  utils.c  utils.h
lab7/: io.c
lab8/: io.c  main.c  main.cpp
lab9/src/: io.c  io.h  main.c  sort.c  sort.h  utils.c  utils.h
(+7 files in other folders)
